--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -2608,7 +2608,7 @@ button {
 
   .product-body_left-btn-mob {
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 
   .product-body_left-btn-mob p {
@@ -2640,6 +2640,7 @@ button {
     /* font-size: 12px !important; */
     line-height: 14px;
     margin-bottom: 20px;
+    margin-top: 30px;
   }
   .product-body_right-btn p {
     font-size: 12px !important;
