--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -302,34 +302,34 @@ div {
 
 
 .production_plate-img5 {
-  background: url(../images/Parosin_cards_big.png)no-repeat center/contain !important;
+  background: url(../images/Parosin_cards_big.png)no-repeat center/cover !important;
 }
 .production_plate-img6 {
-  background: url(../images/Boston_cards_big.png)no-repeat center/contain !important;
+  background: url(../images/Boston_cards_big.png)no-repeat center/cover !important;
 }
 .production_plate-img7 {
-  background: url(../images/BostonBlistry_cards_big.png)no-repeat center/contain !important;
+  background: url(../images/BostonBlistry_cards_big.png)no-repeat center/cover !important;
 }
 .production_plate-img8 {
-  background: url(../images/Masterbond_cards_big.png)no-repeat center/contain !important;
+  background: url(../images/Masterbond_cards_big.png)no-repeat center/cover !important;
 }
 .production_plate-img9 {
-  background: url(../images/FlowArt_cards_big.png)no-repeat center/contain !important;
+  background: url(../images/FlowArt_cards_big.png)no-repeat center/cover !important;
 }
 .production_plate-img10 {
-  background: url(../images/FissureSealant_cards_big.png)no-repeat center/contain !important;
+  background: url(../images/FissureSealant_cards_big.png)no-repeat center/cover !important;
 }
 .production_plate-img11 {
-  background: url(../images/BostonGlaze_cards_big.png)no-repeat center/contain !important;
+  background: url(../images/BostonGlaze_cards_big.png)no-repeat center/cover !important;
 }
 .production_plate-img12 {
-  background: url(../images/Colorant_cards_big.png)no-repeat center/contain !important;
+  background: url(../images/Colorant_cards_big.png)no-repeat center/cover !important;
 }
 .production_plate-img13 {
-  background: url(../images/Silgips_cards_big.png)no-repeat center/contain !important;
+  background: url(../images/Silgips_cards_big.png)no-repeat center/cover !important;
 }
 .production_plate-img14 {
-  background: url(../images/Muson_cards_big.png)no-repeat center/contain !important;
+  background: url(../images/Muson_cards_big.png)no-repeat center/cover !important;
 }
 
 .production_plate-empty {
@@ -2622,7 +2622,11 @@ button {
 
   .production_plate {
     margin-bottom: 55px;
-    /* margin-left: 15%; */
+  }
+
+  .slider-prod .production_plate {
+    margin-left: 15%;
+
   }
   .product-body_left {
     display: none;
