--- a/Arcona-dent/css/style.css
+++ b/Arcona-dent/css/style.css
@@ -137,6 +137,60 @@ div {
 
 /* DENT */
 
+/* Слайдер */
+.slider-mob{
+  max-width: 90%;
+  position: relative;
+  margin: auto;
+  height: 300px;
+}
+/* Картинка масштабируется по отношению к родительскому элементу */
+.slider-mob .item-mob img {
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
+}
+/* Кнопки вперед и назад */
+.slider-mob .previous, .slider-mob .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+.slider-mob .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+/* При наведении на кнопки добавляем фон кнопок */
+.slider-mob .previous:hover,
+.slider-mob .next:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+/* Анимация слайдов */
+.slider-mob .item-mob {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@keyframes fade {
+  from {
+      opacity: 0.4
+  }
+  to {
+      opacity: 1
+  }
+}
+
+
+/* ////////////// */
+
+
 .pre-text {
   position: relative;
   top: -30px;
@@ -2158,6 +2212,8 @@ button {
 .footer-logo_container p {
   margin: 0;
   margin-bottom: 20px;
+  font-size: 13px;
+  line-height: 16px;
 }
 .footer-logo_container p:nth-child(3) {
   margin: 0;
@@ -2431,7 +2487,7 @@ button {
     font-size: 13px;
     line-height: 16px;
     text-align: center;
-    max-width: 320px;
+    max-width: 100%;
   }
 
   .blockmob-img1 {
