--- a/Coldisept/css/style.css
+++ b/Coldisept/css/style.css
@@ -1447,11 +1447,11 @@ color: #00A79D;
 }
 
 .where-to-buy {
-  background-color: white;
-  color: #FF6700 !important;
-  font-size: 10px !important;
-  line-height: 10px !important;
-  font-weight: bold;
+  background-color: #282725;
+  color: white !important;
+  /* font-size: 10px !important; */
+  /* line-height: 10px !important; */
+  /* font-weight: bold; */
   padding: 10px 20px;
   border-radius: 10px;
 }
@@ -1562,9 +1562,9 @@ font-size: 14px;
   margin-right: 12px;
   text-transform: uppercase;
   color: #4F4F4F;
-  font-size: 12px;
-  font-family: 'MM', sans-serif;
-  line-height: 13px;
+  font-size: 16px;
+  font-family: 'AB', sans-serif;
+  line-height: 16px;
 }
 
 
