--- a/Coldisept/css/style.css
+++ b/Coldisept/css/style.css
@@ -418,7 +418,7 @@ div {
 .container-5_text-block p {
   font-size: 22px;
   line-height: 26px;
-  font-family: "AR";
+  font-family: "AB";
   margin-bottom: 60px;
 }
 .container-5_text-block p b {
@@ -1950,6 +1950,7 @@ ol {
 
 #menu {
   position: absolute;
+  height: 110vh;
   right: -40px;
   width: 110vw;
   margin: -100px 0 0 -50px;
