--- a/Coldisept/css/style.css
+++ b/Coldisept/css/style.css
@@ -2045,6 +2045,10 @@ ol {
 
 
 @media screen and (max-width: 1024px) {
+  .container-1_left p {
+    font-size: 26px;
+    line-height: 30px;
+  }
   .container-5_inner {
     overflow: hidden;
   }
@@ -2062,6 +2066,12 @@ ol {
 
 
 
+@media screen and (max-width: 760px) {
+  .container-1_left p {
+    font-size: 22px;
+    line-height: 28px;
+  }
+}
 
 @media screen and (max-width: 760px) {
   .container-1_mob {
