--- a/Coldisept/css/style.css
+++ b/Coldisept/css/style.css
@@ -114,6 +114,10 @@ div {
 
 /* coldisept */
 
+.mob-container-5_img-block {
+  display: none;
+}
+
 p {
   color: #282725;
 }
@@ -2085,6 +2089,19 @@ ol {
   }
   .container-5_img-block {
     left: 5%;
+  }
+  .mob-container-5_img-block {
+    display: block;
+    width: 100%;
+    height: 400px;
+    background: url(../images/pack-with-back.png)no-repeat 10%/cover;
+    margin-bottom: 60px;
+  }
+  .mob-container-5_img-block-blue {
+    background: url(../images/pack-with-back2.png)no-repeat 10%/cover !important;
+  }
+  .mob-container-5_img-block-orange {
+    background: url(../images/pack-with-back3.png)no-repeat 10%/cover !important;
   }
 }
 
