--- a/Coldisept/css/style.css
+++ b/Coldisept/css/style.css
@@ -114,6 +114,15 @@ div {
 
 /* coldisept */
 
+.container-5 {
+  position: relative;
+  overflow: hidden;
+}
+
+/* .container-5_inner {
+  overflow: hidden;
+} */
+
 .mob-container-5_img-block {
   display: none;
 }
@@ -461,17 +470,18 @@ p {
 }
 
 .container-5_img-block {
-  position: relative;
-    left: 20%;
+  position: absolute;
+    left: 65%;
+    top: 0px;
     width: 100%;
   height: 550px;
-  background: url(../images/pack-with-back.png)no-repeat 20%/cover;
+  background: url(../images/pack-with-back.png)no-repeat 20%/contain;
 }
 .container-5_blue .container-5_img-block {
-  background: url(../images/pack-with-back2.png)no-repeat 20%/cover;
+  background: url(../images/pack-with-back2.png)no-repeat 20%/contain;
 }
 .container-5_orange .container-5_img-block {
-  background: url(../images/pack-with-back3.png)no-repeat 20%/cover;
+  background: url(../images/pack-with-back3.png)no-repeat 20%/contain;
 }
 
 .container-5_inner {
@@ -2049,8 +2059,11 @@ ol {
 
 
 @media screen and (max-width: 1024px) {
+  .container-1_left-img {
+    width: 140px;
+  }
   .container-5_img-block {
-    left: 5%;
+    left: 53%;
   }
   .container-1_left p {
     font-size: 26px;
@@ -2087,9 +2100,9 @@ ol {
   .container-3_main {
     flex-direction: column-reverse;
   }
-  .container-5_img-block {
+  /* .container-5_img-block {
     left: 5%;
-  }
+  } */
   .container-3_left-block {
     width: 90%;
   }
